--- a/API/packages.config
+++ b/API/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngleSharp" version="0.16.1" targetFramework="net461" />
+  <package id="AngleSharp.Css" version="0.16.3" targetFramework="net461" />
+  <package id="AngleSharp.Io" version="0.16.0" targetFramework="net461" />
+  <package id="AngleSharp.Xml" version="0.16.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net461" />
   <package id="EPPlus" version="4.5.3.3" targetFramework="net461" />
+  <package id="HtmlSanitizer" version="7.1.475" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
@@ -19,7 +24,7 @@
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.2.0" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.8" targetFramework="net461" />
@@ -32,22 +37,41 @@
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Microsoft.Web.WebJobs.Publish" version="2.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net461" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.Collections.Specialized" version="4.3.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="5.0.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net461" />
+  <package id="System.Management" version="5.0.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.1" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
+  <package id="System.Net.NameResolution" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Security" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net461" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net461" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
+  <package id="Ude.NetStandard" version="1.2.0" targetFramework="net461" />
   <package id="Unity.Abstractions" version="3.3.1" targetFramework="net461" />
   <package id="Unity.Container" version="5.8.11" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
+  <package id="WebSocket4Net" version="0.15.2" targetFramework="net461" />
 </packages>
