--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -152,6 +152,11 @@
     <Compile Include="DynamicWidgetManager.cs" />
     <Compile Include="CountryManager.cs" />
     <Compile Include="MultiTenantUserRoleAccessManager.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="StateManager.cs" />
     <Compile Include="StatementSearchManager.cs" />
     <Compile Include="SystemActivityHistoryManager.cs" />
@@ -201,6 +206,12 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
