--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -128,7 +128,8 @@
     <Compile Include="ScheduleLogDetailSearchParameter.cs" />
     <Compile Include="ScheduleLogErrorDetail.cs" />
     <Compile Include="ScheduleRunHistory.cs" />
-    <Compile Include="Search Parameter\CustomerHomeLoanSearchParameter.cs" />
+    <Compile Include="Search Parameter\CustomerHomeLoanSearchParameter - Copy.cs" />
+    <Compile Include="Search Parameter\CustomerMCASearchParameter.cs" />
     <Compile Include="Search Parameter\CustomerInvestmentSearchParameter.cs" />
     <Compile Include="Search Parameter\CustomerPersonalLoanSearchParameter.cs" />
     <Compile Include="Search Parameter\MessageAndNoteSearchParameter.cs" />
@@ -184,6 +185,7 @@
     <Compile Include="TransactionData\Nedbank\DM_CustomerMaster.cs" />
     <Compile Include="TransactionData\Nedbank\DM_ExplanatoryNote.cs" />
     <Compile Include="TransactionData\Nedbank\DM_GreenbacksMaster.cs" />
+    <Compile Include="TransactionData\Nedbank\DM_MCAMaster.cs" />
     <Compile Include="TransactionData\Nedbank\DM_HomeLoanMaster.cs" />
     <Compile Include="TransactionData\Nedbank\DM_InvestmentMaster.cs" />
     <Compile Include="TransactionData\Nedbank\DM_InvestmentTransaction.cs" />
