column added into scedule table and related changes to insert that values on save. Add Data Hub menu item in UI

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -106,6 +106,7 @@
     <Compile Include="MarketingMessage.cs" />
     <Compile Include="MultiTenantUserRoleAccess.cs" />
     <Compile Include="NedBank\BreakdownOfInvestmentAccounts.cs" />
+    <Compile Include="NedBank\ETLScheduleModel.cs" />
     <Compile Include="NedBank\InvestmentPottfolio.cs" />
     <Compile Include="NedBank\InvestmentTransaction.cs" />
     <Compile Include="NedBank\InvestorPerformance.cs" />
