--- a/App/ClientApp/package.json
+++ b/App/ClientApp/package.json
@@ -50,6 +50,7 @@
     "owl.carousel": "^2.3.4",
     "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
