Data Hub Controller, related Repository , manager and UI Changes

--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -146,6 +146,7 @@
     <Compile Include="ArchivalProcessManager.cs" />
     <Compile Include="CityManager.cs" />
     <Compile Include="ClientManager.cs" />
+    <Compile Include="ETLScheduleManager.cs" />
     <Compile Include="GenerateStatementManager.cs" />
     <Compile Include="PageTypeManager.cs" />
     <Compile Include="ContactTypeManager.cs" />
