--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -107,6 +107,8 @@
     <Compile Include="MarketingMessage.cs" />
     <Compile Include="MultiTenantUserRoleAccess.cs" />
     <Compile Include="NedBank\BreakdownOfInvestmentAccounts.cs" />
+    <Compile Include="NedBank\ETLBatchMasterViewModel.cs" />
+    <Compile Include="NedBank\ETLScheduleListModel.cs" />
     <Compile Include="NedBank\ETLScheduleModel.cs" />
     <Compile Include="NedBank\InvestmentPottfolio.cs" />
     <Compile Include="NedBank\InvestmentTransaction.cs" />
@@ -133,6 +135,7 @@
     <Compile Include="ScheduleLogDetailSearchParameter.cs" />
     <Compile Include="ScheduleLogErrorDetail.cs" />
     <Compile Include="ScheduleRunHistory.cs" />
+    <Compile Include="Search Parameter\ETLScheduleSearchParameter.cs" />
     <Compile Include="Search Parameter\ProductPageTypeSearchParameter.cs" />
     <Compile Include="Search Parameter\ProductSearchParameter.cs" />
     <Compile Include="Search Parameter\CustomerHomeLoanSearchParameter - Copy.cs" />
