Resolved the common folder issue

--- a/API/Web.config
+++ b/API/Web.config
@@ -76,7 +76,8 @@
     <add key="ParallelThreadCount" value="8" />
     <add key="MinimumArchivalPeriodDays" value="30" />
     <add key="IsWantToUseNisEngines" value="FALSE" />
-    
+    <add key="HeaderFooterFontFolderPath" value="C:\\UserFiles" />
+    <add key="DeleteHtmlAfterPdfGenerate" value="false" />
   </appSettings>
   
   <system.web>
