Working on Code Cleanup server and ui application

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -106,19 +106,19 @@
     <Compile Include="InvestmentAccount.cs" />
     <Compile Include="MarketingMessage.cs" />
     <Compile Include="MultiTenantUserRoleAccess.cs" />
-    <Compile Include="NedBank\BreakdownOfInvestmentAccounts.cs" />
-    <Compile Include="NedBank\ETLBatchMasterViewModel.cs" />
-    <Compile Include="NedBank\ETLScheduleBatchLogModel.cs" />
-    <Compile Include="NedBank\ETLScheduleListModel.cs" />
-    <Compile Include="NedBank\ETLScheduleModel.cs" />
-    <Compile Include="NedBank\InvestmentPottfolio.cs" />
-    <Compile Include="NedBank\InvestmentTransaction.cs" />
-    <Compile Include="NedBank\InvestorPerformance.cs" />
-    <Compile Include="NedBank\ProductViewModel.cs" />
-    <Compile Include="NedBank\ProductPageTypeMappingViewModel.cs" />
-    <Compile Include="NedBank\ScheduleListModel.cs" />
-    <Compile Include="NedBank\ScheduleModel.cs" />
-    <Compile Include="NedBank\StatementViewModel.cs" />
+    <Compile Include="PPS\BreakdownOfInvestmentAccounts.cs" />
+    <Compile Include="PPS\ETLBatchMasterViewModel.cs" />
+    <Compile Include="PPS\ETLScheduleBatchLogModel.cs" />
+    <Compile Include="PPS\ETLScheduleListModel.cs" />
+    <Compile Include="PPS\ETLScheduleModel.cs" />
+    <Compile Include="PPS\InvestmentPottfolio.cs" />
+    <Compile Include="PPS\InvestmentTransaction.cs" />
+    <Compile Include="PPS\InvestorPerformance.cs" />
+    <Compile Include="PPS\ProductViewModel.cs" />
+    <Compile Include="PPS\ProductPageTypeMappingViewModel.cs" />
+    <Compile Include="PPS\ScheduleListModel.cs" />
+    <Compile Include="PPS\ScheduleModel.cs" />
+    <Compile Include="PPS\StatementViewModel.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="PageWidget.cs" />
     <Compile Include="PageWidgetVistorData.cs" />
@@ -195,23 +195,7 @@
     <Compile Include="TransactionData\DataUsage.cs" />
     <Compile Include="TransactionData\EmailsBySubscription.cs" />
     <Compile Include="TransactionData\MeetingUsage.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_AccountsSummary.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_BranchMaster.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_CustomerMaster.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_ExplanatoryNote.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_GreenbacksMaster.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_CorporateSaverMaster.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_MCAMaster.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_HomeLoanMaster.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_InvestmentMaster.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_InvestmentTransaction.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_MarketingMessage.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_NewsAndAlerts.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_PersonalLoanArrears.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_PersonalLoanMaster.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_PersonalLoanTransaction.cs" />
-    <Compile Include="TransactionData\Nedbank\DM_ReminderAndRecommendation.cs" />
-    <Compile Include="TransactionData\Nedbank\SpecialMessage.cs" />
+    <Compile Include="TransactionData\PPS\SpecialMessage.cs" />
     <Compile Include="TransactionData\StatementMetadata.cs" />
     <Compile Include="TransactionData\SubscriptionMaster.cs" />
     <Compile Include="TransactionData\SubscriptionSpend.cs" />
