--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -100,26 +100,7 @@
     <Compile Include="Entities\CountryRecord.cs" />
     <Compile Include="Entities\CustomerMasterRecord.cs" />
     <Compile Include="Entities\CustomerMediaRecord.cs" />
-    <Compile Include="Entities\DM_AccountAnalysisRecord.cs" />
-    <Compile Include="Entities\DM_AccountSummaryRecord.cs" />
-    <Compile Include="Entities\DM_BranchMasterRecord.cs" />
     <Compile Include="Entities\DM_CustomerMasterRecord.cs" />
-    <Compile Include="Entities\DM_CustomerNewsAndAlertsRecord.cs" />
-    <Compile Include="Entities\DM_CustomerProductWiseRewardPointsRecord.cs" />
-    <Compile Include="Entities\DM_CustomerReminderRecosRecord.cs" />
-    <Compile Include="Entities\DM_CustomerRewardPointsRecord.cs" />
-    <Compile Include="Entities\DM_CustomerRewardPointsRedeemedRecord.cs" />
-    <Compile Include="Entities\DM_CustomerRewardSpendByCategoryRecord.cs" />
-    <Compile Include="Entities\DM_ExplanatoryNotesRecord.cs" />
-    <Compile Include="Entities\DM_GreenbacksMasterRecord.cs" />
-    <Compile Include="Entities\DM_InvestmentMasterRecord.cs" />
-    <Compile Include="Entities\DM_MarketingMessagesRecord.cs" />
-    <Compile Include="Entities\DM_NewsAndAlertsRecord.cs" />
-    <Compile Include="Entities\DM_PersonalLoanArrearsRecord.cs" />
-    <Compile Include="Entities\DM_PersonalLoanMasterRecord.cs" />
-    <Compile Include="Entities\DM_PersonalLoanTransactionRecord.cs" />
-    <Compile Include="Entities\DM_ReminderRecosRecord.cs" />
-    <Compile Include="Entities\DM_SpecialMessagesRecord.cs" />
     <Compile Include="Entities\DynamicWidgetFilterDetail.cs" />
     <Compile Include="Entities\DynamicWidgetRecord.cs" />
     <Compile Include="Entities\EntityFieldMapRecord.cs" />
@@ -128,22 +109,9 @@
     <Compile Include="Entities\FnGetStaticAndDynamicWidgets_Result.cs" />
     <Compile Include="Entities\FnUserTenant_Result.cs" />
     <Compile Include="Entities\MultiTenantUserAccessMapRecord.cs" />
-    <Compile Include="Entities\NB_CorporateSaverMaster.cs" />
-    <Compile Include="Entities\NB_CorporateSaverTax.cs" />
-    <Compile Include="Entities\NB_CorporateSaverTransactions.cs" />
-    <Compile Include="Entities\NB_CustomerMaster.cs" />
-    <Compile Include="Entities\NB_HomeLoanArrears.cs" />
-    <Compile Include="Entities\NB_HomeLoanMaster.cs" />
-    <Compile Include="Entities\NB_HomeLoanSummary.cs" />
-    <Compile Include="Entities\NB_HomeLoanTransaction.cs" />
-    <Compile Include="Entities\NB_InvestmentMaster.cs" />
-    <Compile Include="Entities\NB_InvestmentTransaction.cs" />
-    <Compile Include="Entities\NB_MCAMaster.cs" />
-    <Compile Include="Entities\NB_MCATransaction.cs" />
     <Compile Include="Entities\NB_SegmentMaster.cs" />
     <Compile Include="DAL\NISDataContext.Context.cs" />
     <Compile Include="Entities\NB_SegmentTypeMaster.cs" />
-    <Compile Include="Entities\NB_ServiceMessagesAndContacts.cs" />
     <Compile Include="Entities\PageRecord.cs" />
     <Compile Include="Entities\PageTypeRecord.cs" />
     <Compile Include="Entities\PageWidgetMapRecord.cs" />
@@ -219,19 +187,11 @@
     <Compile Include="IRepository\IWidgetRepository.cs" />
     <Compile Include="IRepository\IRoleRepository.cs" />
     <Compile Include="IRepository\IUserRepository.cs" />
-    <Compile Include="IRepository\NedBank\ICustomerRepository.cs" />
-    <Compile Include="IRepository\NedBank\ICorporateSaverRepository.cs" />
-    <Compile Include="IRepository\NedBank\IMCARepository.cs" />
-    <Compile Include="IRepository\NedBank\IInvestmentRepository.cs" />
-    <Compile Include="IRepository\NedBank\IProductRepository.cs" />
+    <Compile Include="IRepository\PPS\IProductRepository.cs" />
     <Compile Include="Mappings\ScheduleLogDetailRecord.cs" />
     <Compile Include="Mappings\View_PageRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SQLRepository\NedBank\SQLProductRepository.cs" />
-    <Compile Include="SQLRepository\NedBank\SQLCustomerRepository.cs" />
-    <Compile Include="SQLRepository\NedBank\SQLInvestmentRepository.cs" />
-    <Compile Include="SQLRepository\NedBank\SQLCorporateSaverRepository.cs" />
-    <Compile Include="SQLRepository\NedBank\SQLMCARepository.cs" />
+    <Compile Include="SQLRepository\PPS\SQLProductRepository.cs" />
     <Compile Include="SQLRepository\SQLAnalyticsDataRepository.cs" />
     <Compile Include="SQLRepository\SQLArchivalProcessRepository.cs" />
     <Compile Include="SQLRepository\SQLAzureCityRepository.cs" />
