Add  stored procedure (Dummy data) for FSP statement

--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Entities\EntityFieldMapRecord.cs" />
     <Compile Include="Entities\EtlBatches.cs" />
     <Compile Include="Entities\FnGetParentAndChildTenant_Result.cs" />
+    <Compile Include="Entities\spIAA_PaymentDetail.cs" />
     <Compile Include="Entities\FnGetStaticAndDynamicWidgets_Result.cs" />
     <Compile Include="Entities\FnUserTenant_Result.cs" />
     <Compile Include="Entities\MultiTenantUserAccessMapRecord.cs" />
