--- a/API/API.csproj
+++ b/API/API.csproj
@@ -318,6 +318,7 @@
     <Content Include="Resources\images\eConfirm-round.png" />
     <Content Include="Resources\images\eConfirm.png" />
     <Content Include="Resources\images\Footer_Image.png" />
+    <Content Include="Resources\images\leftarrowlogo.jpg" />
     <Content Include="Resources\images\logo.png" />
     <Content Include="Resources\images\NEDBANKLogo.png" />
     <Content Include="Resources\images\NedBankLogoBlack.png" />
